--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@flowplayer/player": "^3.4.5",
+    "@wowzamediasystems/sdk-rts": "^0.1.37",
     "hls.js": "^1.3.1",
     "requirejs": "^2.3.6",
     "solid-js": "^1.6.6",
